# suraft

./: .gitignore  Cargo.toml  Makefile  README copy.md  README.md  rustfmt.toml
examples/hello/: Cargo.toml  README-cn.md  README.md
examples/hello/src/: logging.rs  main.rs
network/pseudonet/: Cargo.toml
network/pseudonet/src/: lib.rs
rfcs/: 0001-goals.md  0002-arch.md  0003-data-storage.md  0004-server-state.md  0005-protocol.md  0006-implementation-api.md  0099-multi-leader.md
scripts/: build_change_log.py
stores/memstore/: Cargo.toml
stores/memstore/src/: lib.rs
suraft/: Cargo.toml
suraft/src/: lib.rs  lib_readme.md
suraft/src/app/: mod.rs
suraft/src/base/: leased.rs  mod.rs
suraft/src/base/display_ext/: display_btreemap_opt_value.rs  display_instant.rs  display_result.rs  display_slice.rs  mod.rs
suraft/src/config/: config.rs  config_test.rs  errors.rs  mod.rs
suraft/src/core/: core.rs  core_state.rs  mod.rs  tick.rs
suraft/src/core/io/: api_message.rs  balancer.rs  mod.rs  notification.rs
suraft/src/core/roles/: candidate.rs  leader.rs  leader_handler.rs  mod.rs  vote_handler.rs
suraft/src/docs/cluster_control/: dynamic-membership.md
suraft/src/docs/components/: mod.rs
suraft/src/docs/data/: extended-membership.md  leader_id.md  log_pointers.md  vote.md
suraft/src/docs/faq/: faq-toc.md  faq.md
suraft/src/docs/feature_flags/: feature-flags.md
suraft/src/docs/getting_started/: getting-started.md
suraft/src/docs/internal/: architecture.md  threading.md
suraft/src/docs/obsolete/: blank-log-heartbeat.md
suraft/src/docs/protocol/: log_replication.md
suraft/src/docs/upgrade_guide/: mod.rs  upgrade-v08-v09.md  upgrade.md
suraft/src/errors/: mod.rs
suraft/src/impls/: mod.rs
suraft/src/metrics/: metric.rs  metric_display.rs  metrics.rs  mod.rs  serde_instant.rs  server_state.rs  wait.rs  wait_condition.rs
suraft/src/network/: connection.rs  mod.rs
suraft/src/quorum/: mod.rs  progress.rs  quorum_set.rs  quorum_set_impl.rs  quorum_set_test.rs
suraft/src/storage/: callback.rs  log_storage.rs  log_storage_ext.rs  mod.rs  path_config.rs
suraft/src/suraft/: change_membership.rs  inner.rs  mod.rs  request_vote.rs  runtime_config_handle.rs  write_result.rs
suraft/src/testing/: mod.rs
suraft/src/type_config/: declare_suraft_types.rs  declare_suraft_types_test.rs  mod.rs  type_config_ext.rs
tests/: Cargo.toml
tests/tests/append_entries/: main.rs  t10_conflict_with_empty_entries.rs  t10_see_higher_vote.rs  t11_append_entries_with_bigger_term.rs  t11_append_inconsistent_log.rs  t30_replication_1_voter_to_isolated_learner.rs  t60_enable_heartbeat.rs  t61_heartbeat_reject_vote.rs  t61_large_heartbeat.rs  t90_issue_216_stale_last_log_id.rs
tests/tests/client_api/: t10_client_writes.rs  t11_client_reads.rs  t12_trigger_purge_log.rs  t13_begin_receiving_snapshot.rs  t13_get_snapshot.rs  t13_install_full_snapshot.rs  t13_trigger_snapshot.rs  t14_transfer_leader.rs  t16_with_raft_state.rs  t16_with_state_machine.rs  t50_lagging_network_write.rs  t51_write_when_leader_quit.rs
tests/tests/elect/: t10_elect_compare_last_log.rs  t11_elect_seize_leadership.rs
tests/tests/fixtures/: mod.rs
tests/tests/life_cycle/: t10_initialization.rs  t11_shutdown.rs  t50_follower_restart_does_not_interrupt.rs  t50_single_follower_restart.rs  t50_single_leader_restart_re_apply_logs.rs  t90_issue_607_single_restart.rs  t90_issue_920_non_voter_leader_restart.rs
tests/tests/log_store/: t10_save_committed.rs
tests/tests/management/: t10_raft_config.rs
tests/tests/membership/: t10_learner_restart.rs  t10_single_node.rs  t11_add_learner.rs  t12_concurrent_write_and_add_learner.rs  t20_change_membership.rs  t21_change_membership_cases.rs  t30_commit_joint_config.rs  t30_elect_with_new_config.rs  t31_add_remove_follower.rs  t31_remove_leader.rs  t31_removed_follower.rs  t51_remove_unreachable_follower.rs  t52_change_membership_on_uninitialized_node.rs  t99_issue_471_adding_learner_uses_uninit_leader_id.rs  t99_issue_584_replication_state_reverted.rs  t99_new_leader_auto_commit_uniform_config.rs
tests/tests/metrics/: t10_current_leader.rs  t10_leader_last_ack.rs  t10_purged.rs  t10_server_metrics_and_data_metrics.rs  t20_metrics_state_machine_consistency.rs  t30_leader_metrics.rs  t40_metrics_wait.rs
tests/tests/replication/: main.rs  t50_append_entries_backoff.rs  t50_append_entries_backoff_rejoin.rs  t60_feature_loosen_follower_log_revert.rs  t61_allow_follower_log_revert.rs
tests/tests/state_machine/: t10_total_order_apply.rs  t20_state_machine_apply_membership.rs
(+20 files in other folders)
