[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Zhang Yanpo <drdr.xp@gmail.com",
    "tisonkun <wander4096@gmail.com>",
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "Shared Unit Raft"
documentation = "https://docs.rs/suraft"
homepage = "https://github.com/suraft/suraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/suraft/suraft"


[workspace.dependencies]
anyerror = { version = "0.1.10" }
anyhow = "1.0.63"
async-entry = "0.3.1"
byte-unit = "5.1.4"
bytes = "1.0"
chrono = { version = "0.4" }
clap = { version = "4.1.11", features = ["derive", "env"] }
derive_more = { version = "1.0", features = ["std", "from", "try_into", "display"] }
futures = "0.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
openraft-macros = "0.9.17"
pretty_assertions = "1.0.0"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
semver = "1.0.14"
serde = { version = "1.0.114", features = ["derive", "rc"] }
serde_json = "1.0.57"
syn = "2.0"
tempfile = { version = "3.4.0" }
test-harness = "0.3.0"
thiserror = "1.0.49"
tokio = { version = "1.22", default-features = false, features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = { version = "0.1.40" }
tracing-appender = "0.2.0"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
validit = { version = "0.2.2" }

[workspace]

resolver = "2"

members = [
    "suraft",
    "tests",
    "stores/memstore",
    "network/pseudonet",
    "examples/hello",
]
exclude = [
]
