[package]
name = "memstore"
description = "A in-memory implementation of the `suraft::LogStorage`"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

[dependencies]
suraft = { path= "../../suraft", version = "0.1.0", features=["type-alias"] }

tracing         = { workspace = true }

[dev-dependencies]

[features]
bt = ["suraft/bt"]

[package.metadata.docs.rs]
all-features = true
